--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ tomli = "1.2.2"
 typing-extensions = "4.0.0"
 uritemplate = "4.1.1"
 urllib3 = "1.26.7"
+django-redis = "^5.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "21.11b1"
